--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@prisma/client": "^3.11.0",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
     "jest": "^27.4.4",
+    "prisma": "^3.11.0",
     "vue-jest": "^3.0.4"
   }
 }
