--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue-flag-icon": "1.0.6",
         "vue-server-renderer": "^2.6.14",
         "vue-template-compiler": "^2.6.14",
+        "vuex-persistedstate": "^4.1.0",
         "webpack": "^4.46.0"
     },
     "devDependencies": {}
