--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
 		"@nuxtjs/vuetify": "^1.12.3",
 		"axios": "^0.26.1",
 		"core-js": "^3.19.3",
+		"cors": "^2.8.5",
 		"cypress": "^9.5.3",
+		"dotenv": "^10.0.0",
 		"express": "latest",
+		"express-validator": "^6.13.0",
 		"helmet": "^5.0.2",
+		"moment": "^2.29.3",
 		"mssql": "7.3.0",
 		"nuxt": "^2.15.8",
 		"nuxt-helmet": "^2.1.1",
@@ -25,10 +29,7 @@
 		"vue-server-renderer": "^2.6.14",
 		"vue-template-compiler": "^2.6.14",
 		"vuex-persistedstate": "^4.1.0",
-		"webpack": "^4.46.0",
-		"express-validator": "^6.13.0",
-		"cors": "^2.8.5",
-		"dotenv": "^10.0.0"
+		"webpack": "^4.46.0"
 	},
 	"devDependencies": {
 		"mocha": "^9.1.3",
