--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"build": "nuxt build",
 		"start": "nuxt start",
 		"generate": "nuxt generate",
-		"test": "jest",
-		"testbackend": "nyc --reporter=text mocha 'api/test' --recursive"
+		"testbackend": "jest",
+		"testfrontend": "cypress run"
 	},
 	"dependencies": {
 		"@nuxtjs/vuetify": "^1.12.3",
@@ -32,9 +32,8 @@
 		"webpack": "^4.46.0"
 	},
 	"devDependencies": {
-		"mocha": "^9.1.3",
-		"nodemon": "^2.0.14",
-		"nyc": "^15.1.0",
+		"@types/jest": "^27.4.1",
+		"jest": "^28.0.3",
 		"sinon": "^12.0.1",
 		"supertest": "^6.1.6"
 	}
