--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"dotenv": "^10.0.0"
 	},
 	"devDependencies": {
+		"@mdi/js": "^6.6.96",
 		"chai": "^4.3.6",
 		"cypress": "^9.5.3",
 		"mocha": "^9.1.3",
