--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
 		"webpack": "^4.46.0"
 	},
 	"devDependencies": {
+		"@mdi/js": "^6.6.96",
 		"@types/jest": "^27.4.1",
+		"chai": "^4.3.6",
 		"cypress": "^9.6.0",
-		"jest": "^28.0.3",
-        "chai": "^4.3.6",
+		"jest": "^28.1.0",
 		"sinon": "^12.0.1",
 		"supertest": "^6.1.6"
 	}
