--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
 	},
 	"dependencies": {
 		"@nuxtjs/vuetify": "^1.12.3",
-		"axios": "^0.26.1",
 		"core-js": "^3.19.3",
-		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "latest",
 		"express-validator": "^6.13.0",
@@ -23,12 +21,8 @@
 		"mssql": "7.3.0",
 		"nuxt": "^2.15.8",
 		"nuxt-helmet": "^2.1.1",
-		"vue": "^2.6.14",
 		"vue-flag-icon": "1.0.6",
-		"vue-server-renderer": "^2.6.14",
-		"vue-template-compiler": "^2.6.14",
-		"vuex-persistedstate": "^4.1.0",
-		"webpack": "^4.46.0"
+		"vuex-persistedstate": "^4.1.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.4.1",
