--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"express": "latest",
 		"express-validator": "^6.13.0",
 		"helmet": "^5.0.2",
+		"html2canvas": "^1.4.1",
+		"jspdf": "^2.5.1",
 		"moment": "^2.29.3",
 		"mssql": "7.3.0",
 		"nuxt": "^2.15.8",
