--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
 		"nuxt": "^2.15.8",
 		"nuxt-helmet": "^2.1.1",
 		"vue-flag-icon": "1.0.6",
-		"vuex-persistedstate": "^4.1.0"
+		"vuex-persistedstate": "^4.1.0",
+		"@mdi/js": "^6.6.96"
 	},
 	"devDependencies": {
-		"@mdi/js": "^6.6.96",
 		"@types/jest": "^27.4.1",
 		"chai": "^4.3.6",
 		"cypress": "^9.6.0",
