--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"testfrontend": "cypress run"
 	},
 	"dependencies": {
+		"@mdi/js": "^6.6.96",
 		"@nuxtjs/vuetify": "^1.12.3",
 		"core-js": "^3.19.3",
 		"dotenv": "^10.0.0",
@@ -20,13 +21,13 @@
 		"html2canvas": "^1.4.1",
 		"jspdf": "^2.5.1",
 		"moment": "^2.29.3",
+		"msnodesqlv8": "^2.4.8",
 		"mssql": "7.3.0",
 		"nuxt": "^2.15.8",
 		"nuxt-helmet": "^2.1.1",
 		"vue-flag-icon": "1.0.6",
 		"vue-observe-visibility": "^1.0.0",
-		"vuex-persistedstate": "^4.1.0",
-		"@mdi/js": "^6.6.96"
+		"vuex-persistedstate": "^4.1.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^27.4.1",
