Add more translations and add timestamp for user input

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 LOGGING=true
-DATABASE=konfairProduction
-PICTURE_STORAGE_LOCATION=C:\\Users\\a-qa\\Desktop
+DATABASE=local
+PICTURE_STORAGE_LOCATION=C:\\Users\\kkAAAKA\\Desktop
