Small changes to fix stuff on konfair's end

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 LOGGING=true
-DATABASE=local
-PICTURE_STORAGE_LOCATION=C:\\Users\\kkAAAKA\\Desktop
+DATABASE=konfairProduction
+PICTURE_STORAGE_LOCATION=C:\\Users\\a-qa\\Desktop
+KONFAIR_DB_SERVER_NAME=srvsql
+KONFAIR_DB_DATABASE_NAME=KonfAir-2018
+KONFAIR_DB_USER_NAME=konfair_QA
+KONFAIR_DB_USER_PASSWORD=1GxlNK8Y3jGJ
