Fixes for cotrol point assignment

--- a/.env
+++ b/.env
@@ -5,3 +5,20 @@ KONFAIR_DB_SERVER_NAME=srvsql
 KONFAIR_DB_DATABASE_NAME=KonfAir-2018
 KONFAIR_DB_USER_NAME=konfair_QA
 KONFAIR_DB_USER_PASSWORD=1GxlNK8Y3jGJ
+EXPRESS_DB_SERVER_NAME=SRVAPP3,50259
+EXPRESS_DB_DATABASE_NAME=own
+EXPRESS_DB_USER_NAME=serviceAcount
+EXPRESS_DB_USER_PASSWORD=konf123!proj
+DEFAULT_FREQUENCY_25=2
+DEFAULT_FREQUENCY_50=3
+DEFAULT_FREQUENCY_100=4
+DEFAULT_FREQUENCY_200=7
+DEFAULT_FREQUENCY_300=10
+DEFAULT_FREQUENCY_500=16
+DEFAULT_FREQUENCY_700=22
+DEFAULT_FREQUENCY_1000=30
+DEFAULT_FREQUENCY_1500=40
+DEFAULT_FREQUENCY_2000=50
+DEFAULT_FREQUENCY_3000=60
+DEFAULT_FREQUENCY_4000=65
+DEFAULT_FREQUENCY_5000=70
