--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 LOGGING=true
-DATABASE=konfairProduction
-PICTURE_STORAGE_LOCATION=C:\\Users\\a-qa\\Desktop
+DATABASE=local
+PICTURE_STORAGE_LOCATION=C:\\Users\\kkAAAKA\\Desktop
 KONFAIR_DB_SERVER_NAME=srvsql
 KONFAIR_DB_DATABASE_NAME=KonfAir-2018
 KONFAIR_DB_USER_NAME=konfair_QA
